--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
 
-	<h1>Good luck!</h1>
-	<img src="https://i.imgur.com/Q3cUg29.gif" width="640" height="480" alt="CSS is awesome">
-	<h2>A good place to start is the README file.</h2>
+	<div class="a-card">
+		<img src="" alt="" class="a-card__image">
+		<h4 class="a-card__title"></h4>
+		<a class="a-card__follow-btn"></a>
+		<div class="a-card__stories">
+			<span class="a-card__stories__text"></span>
+		</div>
+		<p class="a-card__content"></p>
+	</div>
 
 	<script src="assets/dist/js/main.js" async></script>
 </body>
