Adjust markup for layout, add rels for data hookups

--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 <body>
 
 	<div class="a-card">
-		<img src="" alt="" class="a-card__image">
-		<h4 class="a-card__title"></h4>
-		<a class="a-card__follow-btn"></a>
-		<div class="a-card__stories">
-			<span class="a-card__stories__text"></span>
+		<div class="a-card__image-wrap">
+			<img src="./assets/images/hagrid.jpg" alt="" class="a-card__image" rel="js-card-image">
 		</div>
-		<p class="a-card__content"></p>
+		<div class="a-card__content">
+			<h4 class="a-card__title" rel="js-card-title">Rubeus Hagrid</h4>
+			<a class="a-card__follow" rel="js-card-follow-link">
+				<span class="follow__text">Follow on Facebook</span>
+			</a>
+			<div class="a-card__stories">
+				<span class="stories__text"><span rel="js-card-stories-count">2</span> New Stories</span>
+			</div>
+			<p class="a-card__desc" rel="js-card-desc">Rubeus Hagrid is a fictional character in the Harry Potter book series written by J. K. Rowling. He is introduced in Harry Potter and the Philosophers Stone as a half-giant and half-human who is the gamekeeper and Keeper of Keys and Grounds of Hogwarts, the primary setting for the first six novels. In the third novel Harry Potter and the Prisoner of Azkaban, Hagrid is promoted to Care of Magical Creatures teacher, and is later revealed to be a member of the Order of the Phoenix.</p>
+		</div>
 	</div>
 
 	<script src="assets/dist/js/main.js" async></script>
