--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<div class="a-card">
 		<div class="a-card__image-wrap">
+			<!-- NOTE: this would be an srcset or lazyloaded - however images are handled throughout the application. -->
 			<img src="./assets/images/hagrid.jpg" alt="" class="a-card__image" rel="js-card-image">
 		</div>
 		<div class="a-card__header">
@@ -17,7 +18,7 @@
 			<!-- NOTE: depending on the action of this Facebook link, it would either be a button or a link.
 				If there were JS interactivity attached where "Follow on Facebook" happens without leaving this
 				page, then it would be button. If it goes to an exteral page or opens a new tab, a link. I am assuming the latter for this test. -->
-			<a class="a-card__follow-btn" rel="js-card-follow-link">
+			<a class="a-card__follow-btn" href="#" rel="js-card-follow-link">
 				<!-- NOTE: This SVG would be an include or broken into another component -->
 				<svg width="25" height="25" class="icon" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#3A5795" cx="12.5" cy="12.5" r="12.5"/><path d="M15.161 11.926H13.42v6.14h-2.58v-6.14H9.613v-2.17h1.227V8.354c0-1.005.482-2.576 2.603-2.576l1.912.008V7.89h-1.387c-.226 0-.548.112-.548.59v1.276h1.967l-.226 2.17z" fill="#FFF"/></g></svg>
 				<span class="text">Follow on Facebook</span>
