Add helper class and rel to expandBtn

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				<span class="text"><span rel="js-card-stories-count">2</span> New Stories</span>
 				<svg width="16" height="9" class="icon" xmlns="http://www.w3.org/2000/svg"><path d="M8 5.107L2.357.117.882 1.624 8 8.118l7.118-6.495L13.643.118z" fill-rule="evenodd"/></svg>
 			</button>
-			<p class="a-card__desc" rel="js-card-desc">Rubeus Hagrid is a fictional character in the Harry Potter book series written by J. K. Rowling. He is introduced in Harry Potter and the Philosophers Stone as a half-giant and half-human who is the gamekeeper and Keeper of Keys and Grounds of Hogwarts, the primary setting for the first six novels. In the third novel Harry Potter and the Prisoner of Azkaban, Hagrid is promoted to Care of Magical Creatures teacher, and is later revealed to be a member of the Order of the Phoenix.</p>
-			<button class="a-card__expand-btn">
+			<p class="a-card__desc js-collapsed" rel="js-card-desc">Rubeus Hagrid is a fictional character in the Harry Potter book series written by J. K. Rowling. He is introduced in Harry Potter and the Philosophers Stone as a half-giant and half-human who is the gamekeeper and Keeper of Keys and Grounds of Hogwarts, the primary setting for the first six novels. In the third novel Harry Potter and the Prisoner of Azkaban, Hagrid is promoted to Care of Magical Creatures teacher, and is later revealed to be a member of the Order of the Phoenix.</p>
+			<button class="a-card__expand-btn" rel="js-card-expand-btn">
 				<svg width="16" height="9" class="icon" xmlns="http://www.w3.org/2000/svg"><path d="M8 5.107L2.357.117.882 1.624 8 8.118l7.118-6.495L13.643.118z" fill-rule="evenodd"/></svg>
 			</button>
 		</div>
